feat(api): add password reset and change
